@@ -1,5 +1,4 @@
-/* style.css
-* 
+/*  style.css
 *   LU: 02/24/2020
 */
 
