@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
 
-  <body>
+  <body style="visibility: hidden">
 
     <!-- Navigation -->
     <nav class="navbar" role="navigation">
@@ -248,6 +248,7 @@
     </footer>
 
     <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/loading.js"></script>
     <script src="js/smoothscroll.js"></script>
   </body>
 </html>
