@@ -1,0 +1,6 @@
+// Very rudimentary for now...
+
+$(document).ready(function() {
+	document.getElementsByTagName("body")[0].style.visibility = "visible";
+	console.log("Done!");
+});
